--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "name": "developerconnect_backend",
   "version": "1.0.0",
-  "engines": {
-    "node": "10.16.3"
-  },
   "description": "Social Network for Software Developers",
   "main": "server.js",
   "scripts": {
@@ -12,8 +9,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild1": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Ademola Sobaki",
   "license": "MIT",
